--- a/src/doc/views/route.pug
+++ b/src/doc/views/route.pug
@@ -13,47 +13,48 @@ html(lang="fr")
 		div(class="container mx-auto space-y-4 bg-gray-100 flex rounded-md flex-col p-5")
 			div(class="text-xl font-semibold")=`Route endpoint : ${route.path}`
 
-			div Body parameters :
-			table(class="table-auto border-collapse")
-				thead
-					tr
-						th(class="border border-gray-400 p-2") Name
-						th(class="border border-gray-400 p-2") Type
-						th(class="border border-gray-400 p-2") Nullable
-						th(class="border border-gray-400 p-2") description
-				tbody
-					each input in route.inputs
+			if route.inputs
+				div Body parameters :
+				table(class="table-auto border-collapse")
+					thead
 						tr
-							td(class="border border-gray-400 p-2")=input.name
-							td(class="border border-gray-400 p-2")
-								if input.type === "String" ||input.type === "Number" ||input.type === "Boolean" ||input.type === "Date"
-									span=input.type
-								else
-									a(href=`${docUrl}/type/${input.type}` class="text-blue-500 underline")=input.type
-							td(class="border border-gray-400 p-2")=input.nullable
-							td(class="border border-gray-400 p-2")=input.description
+							th(class="border border-gray-400 p-2") Name
+							th(class="border border-gray-400 p-2") Type
+							th(class="border border-gray-400 p-2") Nullable
+							th(class="border border-gray-400 p-2") description
+					tbody
+						each input in route.inputs
+							tr
+								td(class="border border-gray-400 p-2")=input.name
+								td(class="border border-gray-400 p-2")
+									if input.type === "String" ||input.type === "Number" ||input.type === "Boolean" ||input.type === "Date"
+										span=input.type
+									else
+										a(href=`${docUrl}/type/${input.type}` class="text-blue-500 underline")=input.type
+								td(class="border border-gray-400 p-2")=input.nullable
+								td(class="border border-gray-400 p-2")=input.description
 
 
-
-			div Response :
-			table(class="table-auto border-collapse")
-				thead
-					tr
-						th(class="border border-gray-400 p-2") Name
-						th(class="border border-gray-400 p-2") Type
-						th(class="border border-gray-400 p-2") Nullable
-						th(class="border border-gray-400 p-2") description
-				tbody
-					each field in route.responseFields
+			if route.responseFields
+				div Response :
+				table(class="table-auto border-collapse")
+					thead
 						tr
-							td(class="border border-gray-400 p-2")=field.name
-							td(class="border border-gray-400 p-2")
-								if field.type === "String" || field.type === "Number" || field.type === "Boolean" || field.type === "Date"
-									span=field.type
-								else
-									a(href=`${docUrl}/type/${field.type}` class="text-blue-500 underline")=field.type
-							td(class="border border-gray-400 p-2")=field.nullable
-							td(class="border border-gray-400 p-2")=field.description
+							th(class="border border-gray-400 p-2") Name
+							th(class="border border-gray-400 p-2") Type
+							th(class="border border-gray-400 p-2") Nullable
+							th(class="border border-gray-400 p-2") description
+					tbody
+						each field in route.responseFields
+							tr
+								td(class="border border-gray-400 p-2")=field.name
+								td(class="border border-gray-400 p-2")
+									if field.type === "String" || field.type === "Number" || field.type === "Boolean" || field.type === "Date"
+										span=field.type
+									else
+										a(href=`${docUrl}/type/${field.type}` class="text-blue-500 underline")=field.type
+								td(class="border border-gray-400 p-2")=field.nullable
+								td(class="border border-gray-400 p-2")=field.description
 
 
 
