--- a/src/doc/views/route.pug
+++ b/src/doc/views/route.pug
@@ -35,7 +35,8 @@ html(lang="fr")
 								td(class="border border-gray-400 p-2")=input.description
 
 
-			if route.responseFields
+			if route.responseType
+				div="IsArray : "+route.responseType.isArray
 				div Response :
 				table(class="table-auto border-collapse")
 					thead
@@ -45,7 +46,7 @@ html(lang="fr")
 							th(class="border border-gray-400 p-2") Nullable
 							th(class="border border-gray-400 p-2") description
 					tbody
-						each field in route.responseFields
+						each field in route.responseType.fields
 							tr
 								td(class="border border-gray-400 p-2")=field.name
 								td(class="border border-gray-400 p-2")
@@ -55,6 +56,3 @@ html(lang="fr")
 										a(href=`${docUrl}/type/${field.type}` class="text-blue-500 underline")=field.type
 								td(class="border border-gray-400 p-2")=field.nullable
 								td(class="border border-gray-400 p-2")=field.description
-
-
-
